# gbfr-tool

./: README-en.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yaml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Save.svelte
src/locales/: en.json  zh-CN.json
